--- a/checkmyproducts-front/src/app/dashboard/components/dashboard/dashboard.component.html
+++ b/checkmyproducts-front/src/app/dashboard/components/dashboard/dashboard.component.html
@@ -1,6 +1,12 @@
 <div class="page">
+ 
     <div class="c-header">
       <app-header></app-header>
+    </div>
+    <div class="c-piechart">
+      <div style="width:400px; height:400px;">
+        <app-pie-chart></app-pie-chart>
+        </div>
     </div>
     <div class="products-list">
       <app-products-list></app-products-list>
