--- a/checkmyproducts-front/src/app/dashboard/components/dashboard/dashboard.component.scss
+++ b/checkmyproducts-front/src/app/dashboard/components/dashboard/dashboard.component.scss
@@ -7,11 +7,13 @@
     .c-header {
       grid-column: 1 / 3;
     }
-  
+    .c-piechart {
+      grid-column: 1 / 2;
+    }
     .products-list {
       display: flex;
       justify-content: center;
-      margin-top: auto;
+      margin-top: 20%;
       margin-bottom: auto;
       grid-column: 2/3;
     }
