--- a/checkmyproducts-front/src/app/dashboard/components/product/product.component.scss
+++ b/checkmyproducts-front/src/app/dashboard/components/product/product.component.scss
@@ -6,12 +6,26 @@
 	align-content: center;
 	border-bottom: 1px solid #e8e8e8;
     padding: 20px 104px 20px 20px;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
 
 	.name-container {
-		margin-right: 4px;
-		margin-bottom: 4px;
-	}
-
+		display: flex;
+        margin: 0;
+        color: #170000;
+    }
+    
+    .tagline-container {
+        color: #959595;
+        margin: 0;
+    }
+    
+    .topic-container {
+        color: #6F6F7D;
+    }
+    .topic-container:hover {
+        text-decoration: underline;
+        cursor: pointer;
+    }
     .img-container {
        
     }
@@ -24,6 +38,9 @@
 
     .infos-container {
         display: flex;
+        flex: auto;
+        margin-left: 10px;
+        flex-direction: column;
     }
 }
 
